--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "stripe/stripe-php": "^12.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
