--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "filament/filament": "^3.0-stable",
         "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
+        "hasnayeen/themes": "^3.0",
         "laravel-notification-channels/pusher-push-notifications": "^4.1",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.0",
@@ -22,6 +23,7 @@
         "livewire/livewire": "^3.0",
         "pusher/pusher-php-server": "^7.2",
         "stripe/stripe-php": "^12.1",
+        "wire-elements/spotlight": "^2.0",
         "wireui/wireui": "^1.18",
         "ysfkaya/filament-phone-input": "^2.0"
     },
