--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "filament/filament": "^3.0-stable",
         "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
-        "hasnayeen/themes": "^3.0",
         "laravel-notification-channels/pusher-push-notifications": "^4.1",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.0",
@@ -21,6 +20,7 @@
         "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "^1.1",
         "pusher/pusher-php-server": "^7.2",
         "stripe/stripe-php": "^12.1",
         "wire-elements/spotlight": "^2.0",
