--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+         "flowbite": "^1.8.1",
         "daisyui": "^3.6.4",
+        "aos": "^3.0.0-beta.6",
         "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.14",
